--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -70,6 +70,7 @@ function (declare_odbc_test_targets libname UNICODE)
     target_link_libraries (${libname}-client-it
         PRIVATE ODBC::App
         PRIVATE Poco::Foundation
+        PRIVATE ICU::uc
         PRIVATE gtest
         PRIVATE gmock
         PRIVATE Threads::Threads
