--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -62,6 +62,8 @@ function (declare_odbc_test_targets libname UNICODE)
         client_test_base.h
         ${PROJECT_SOURCE_DIR}/driver/utils/type_info.cpp
         ${PROJECT_SOURCE_DIR}/driver/utils/unicode_conv.h
+        ${PROJECT_SOURCE_DIR}/driver/utils/unicode_conv_std.h
+        ${PROJECT_SOURCE_DIR}/driver/utils/unicode_conv_icu.h
         misc_it.cpp
         statement_parameters_it.cpp
         performance_it.cpp
