--- a/.travis.yml
+++ b/.travis.yml
@@ -298,6 +298,12 @@ jobs:
         - PACKAGING=yes
         - TESTING=yes
         - STANDALONE_TESTS_ONLY=no
+      addons:
+        homebrew:
+          packages:
+            - icu4c
+            - unixodbc
+          update: true
 
 before_install: |-
   set -Eeo pipefail
