WIP: refactoring of the unicode conversion code

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -81,13 +81,16 @@ add_library (${libname}-impl STATIC
     platform/platform.h
 
     utils/utils.h
+    utils/iostream_debug_helpers.h
+    utils/amortized_istream_reader.h
     utils/resize_without_initialization.h
     utils/object_pool.h
-    utils/amortized_istream_reader.h
-    utils/unicode_conv.h
-    utils/unicode_conv_std.h
-    utils/unicode_conv_icu.h
-    utils/iostream_debug_helpers.h
+    utils/string_pool.h
+    utils/unicode_converter.h
+    utils/conversion_context.h
+    utils/conversion.h
+    utils/conversion_std.h
+    utils/conversion_icu.h
     utils/type_parser.h
     utils/type_info.h
 
