WIP prepare for WORKAROUND_ICU_USE_EXPLICIT_PIVOTING

--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -17,6 +17,7 @@
 #cmakedefine WORKAROUND_ALLOW_UNSAFE_DISPATCH
 #cmakedefine WORKAROUND_DISABLE_SSL
 #cmakedefine WORKAROUND_USE_ICU
+#cmakedefine WORKAROUND_ICU_USE_EXPLICIT_PIVOTING
 #cmakedefine WORKAROUND_ENABLE_TRIM_TRAILING_NULL
 #cmakedefine WORKAROUND_ENABLE_DEFINE_SQLBindParam
 #cmakedefine WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS
