--- a/.travis.yml
+++ b/.travis.yml
@@ -439,12 +439,12 @@ install: |-
   fi
 
 .configure: &configure |-
-  CMAKE_CONFIGURE_ARGS="-DTEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RBWNAT)\" $CMAKE_CONFIGURE_EXTRA_ARGS"
+  CMAKE_CONFIGURE_ARGS="-DCH_ODBC_TEST_DSN_LIST=\"ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RBWNAT)\" $CMAKE_CONFIGURE_EXTRA_ARGS"
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     CMAKE_CONFIGURE_ARGS="-DICU_ROOT=$(brew --prefix)/opt/icu4c $CMAKE_CONFIGURE_ARGS"
   fi
   if [[ "$EXTERNAL_THIRD_PARTY" == "yes" ]]; then
-    CMAKE_CONFIGURE_ARGS="-DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=OFF $CMAKE_CONFIGURE_ARGS"
+    CMAKE_CONFIGURE_ARGS="-DCH_ODBC_USE_SYSTEM_THIRD_PARTIES=ON $CMAKE_CONFIGURE_ARGS"
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       CMAKE_CONFIGURE_ARGS="-DOPENSSL_ROOT_DIR=$(brew --prefix)/opt/openssl $CMAKE_CONFIGURE_ARGS"
     fi
