--- a/.travis.yml
+++ b/.travis.yml
@@ -322,13 +322,16 @@ before_install: |-
 install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     export PATH=$(echo "$PATH" | sed -e 's|:/usr/local/cmake-[^:]*/bin:|:|')
-    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pyodbc
+    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python2 python3 python-pip python3-pip
+    pip install --user pyodbc
+    pip3 install --user pyodbc conan
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     # brew install cmake perl python
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "UnixODBC" ]]; then
       pip3 install --user pyodbc
     fi
+    pip3 install --user conan
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
     export OLD_VSWHERE=yes
 
@@ -339,8 +342,13 @@ install: |-
     wget https://wixtoolset.org/downloads/v3.14.0.712/wix314-binaries.zip
     powershell -Command Expand-Archive wix314-binaries.zip -DestinationPath wix314-binaries
     export WIX="$(cd wix314-binaries && pwd -W)"
+
+    PY2_USER_SITE_PATH="$(py -2 -m site --user-site)"
+    PY3_USER_SITE_PATH="$(py -3 -m site --user-site)"
+    export PATH="${PY3_USER_SITE_PATH//\\//}/../Scripts:${PY2_USER_SITE_PATH//\\//}/../Scripts:$PATH"
+
+    py -3 -m pip install --user conan
   fi
-  pip3 install --user conan
 
 .clickhouse_start: &clickhouse_start |-
   if [[ "$TESTING" == "yes" ]] && [[ "$STANDALONE_TESTS_ONLY" != "yes" ]]; then
